--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>Form</h1>
 
-    <form action="/enviar" method="POST">
-        <input type="text" name="nombre" placeholder="Name" required>
-        <textarea wrap="soft" name="mensaje" placeholder="Your message" required></textarea>
+    <form action="/send" method="POST">
+        <input type="text" name="name" placeholder="Name" required>
+        <textarea wrap="soft" name="message" placeholder="Your message" required></textarea>
         <button type="submit">Submit</button>
     </form>
 
     <h2>Sent messages</h2>
 
-    {% for m in mensajes %}
+    {% for m in messages %}
     <div class="message">
         <strong>{{ m.name }}:</strong>
         <p>{{ m.message }}</p>
